librocksdb-sys/src/lib.rs


    pub fn rocksdb_livefiles_smallestkey(files: *const rocksdb_livefiles_t,
                                         index: c_int,
                                         size: *mut size_t)
                                         -> *const c_char;

    pub fn rocksdb_livefiles_largestkey(files: *const rocksdb_livefiles_t,
                                        index: c_int,
                                        size: *mut size_t)
                                        -> *const c_char;

    pub fn rocksdb_livefiles_destroy(files: *const rocksdb_livefiles_t);

    // Utilities

    pub fn rocksdb_get_options_from_string(base_options: *const rocksdb_options_t,
                                           opts_str: *const c_char,
                                           new_options: *mut rocksdb_options_t,
                                           errptr: *mut *mut c_char);

    pub fn rocksdb_delete_file_in_range(db: *mut rocksdb_t,
                                        start_key: *const c_char,
                                        start_key_len: size_t,
                                        limit_key: *const c_char,
                                        limit_key_len: size_t,
                                        errptr: *mut *mut c_char);

    pub fn rocksdb_delete_file_in_range_cf(db: *mut rocksdb_t,
                                           column_family: *mut rocksdb_column_family_handle_t,
                                           start_key: *const c_char,
                                           start_key_len: size_t,
                                           limit_key: *const c_char,
                                           limit_key_len: size_t,
                                           errptr: *mut *mut c_char);

    pub fn rocksdb_free(ptr: *mut c_void);
}

pub const rocksdb_block_based_table_index_type_binary_search: c_int = 0;
pub const rocksdb_block_based_table_index_type_hash_search: c_int = 1;

pub const rocksdb_no_compression: c_int = 0;
pub const rocksdb_snappy_compression: c_int = 1;
pub const rocksdb_zlib_compression: c_int = 2;
pub const rocksdb_bz2_compression: c_int = 3;
pub const rocksdb_lz4_compression: c_int = 4;
pub const rocksdb_lz4hc_compression: c_int = 5;

pub const rocksdb_level_compaction: c_int = 0;
pub const rocksdb_universal_compaction: c_int = 1;
pub const rocksdb_fifo_compaction: c_int = 2;

pub const rocksdb_similar_size_compaction_stop_style: c_int = 0;
pub const rocksdb_total_size_compaction_stop_style: c_int = 1;

pub const rocksdb_recovery_mode_tolerate_corrupted_tail_records: c_int = 0;
pub const rocksdb_recovery_mode_absolute_consistency: c_int = 1;
pub const rocksdb_recovery_mode_point_in_time: c_int = 2;
pub const rocksdb_recovery_mode_skip_any_corrupted_record: c_int = 3;

pub enum rocksdb_t { }

pub enum rocksdb_backup_engine_t { }

pub enum rocksdb_backup_engine_info_t { }

pub enum rocksdb_restore_options_t { }

pub enum rocksdb_cache_t { }

pub enum rocksdb_compactionfilter_t { }

pub enum rocksdb_compactionfiltercontext_t { }

pub enum rocksdb_compactionfilterfactory_t { }

pub enum rocksdb_comparator_t { }

pub enum rocksdb_env_t { }

pub enum rocksdb_fifo_compaction_options_t { }

pub enum rocksdb_filelock_t { }

pub enum rocksdb_filterpolicy_t { }

pub enum rocksdb_flushoptions_t { }

pub enum rocksdb_iterator_t { }

pub enum rocksdb_logger_t { }

pub enum rocksdb_mergeoperator_t { }

pub enum rocksdb_options_t { }

pub enum rocksdb_block_based_table_options_t { }

pub enum rocksdb_cuckoo_table_options_t { }

pub enum rocksdb_randomfile_t { }

pub enum rocksdb_readoptions_t { }

pub enum rocksdb_seqfile_t { }

pub enum rocksdb_slicetransform_t { }

pub enum rocksdb_snapshot_t { }

pub enum rocksdb_writablefile_t { }

pub enum rocksdb_writebatch_t { }

pub enum rocksdb_writeoptions_t { }

pub enum rocksdb_universal_compaction_options_t { }

pub enum rocksdb_livefiles_t { }

pub enum rocksdb_column_family_handle_t { }
